--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mapbox/mapbox-gl-geocoder": "5.0.1",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "7.0.19",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
