--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "deck.gl": "8.8.9",
+    "js-cookie": "^3.0.1",
     "mapbox-gl": "2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,7 +49,8 @@
           "**/*.stories.*"
         ],
         "rules": {
-          "import/no-anonymous-default-export": "off"
+          "import/no-anonymous-default-export": "off",
+          "sort-imports": "error"
         }
       }
     ]
